--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,14 @@
 <html>
 	<head>
 		<title>Custom JavaScript</title>
+        
         <link href="css/pure/0.4.2/base-min.css" rel="stylesheet">
         <link href="css/pure/0.4.2/grids-nr-min.css" rel="stylesheet">
         <link href="css/pure/0.4.2/forms-nr-min.css" rel="stylesheet">
         <link href="css/pure/0.4.2/buttons-min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
         <script type="text/javascript" src="lib/ace/ace.js" charset="utf-8"></script>
 	</head>
 	<body>
@@ -16,7 +19,7 @@
                 <div class="pure-g host">
                     <div class="pure-u-3-5 host__name">
                         <select id="host" name="host"></select>
-                        <a class="is-hidden" id="goto-host" href="">go to</a>
+                        <a class="is-hidden" id="goto-host" href="#">go to</a>
                     </div>
                     <div class="pure-u-2-5 host__enable">
                         <label for="enable">
@@ -28,8 +31,14 @@
 
                 <div class="pure-g include">
                     <div class="pure-u-1 include__body">
-                        You can inject <a id="include-custom">your own external scripts</a> or <label for="include">one of predefined:</label>
+                        You can inject <a href="#" id="open-popbox">your own external scripts</a> or <label for="include">one of predefined:</label>
                         <select id="include" name="include"></select>
+                    </div>
+                    <div class="include__popbox is-hidden" id="include-popbox">
+                        <div class="include__popbox__body">
+                            <textarea name="external-scripts" id="external-scripts"></textarea>
+                        </div>
+                        <div class="include__popbox__screenmask" id="screen-mask"></div>
                     </div>
                 </div><!-- .include -->
 
@@ -40,21 +49,19 @@
                 </div><!-- .source -->
 
                 <div class="pure-g controls">
-                    <div class="pure-u-2-5 controls__save-version">
+                    <div class="pure-u-2-5 controls__save-revision">
                         <input type="submit" class="pure-button pure-button-primary" name="save" value="save">
-                        <em>revision <span id="versions-counter">1 of 1</span> </em>
+                        <em id="revision-name">revision <span id="revision-counter">1 of 1</span></em>
                     </div>
-                    <div class="pure-u-3-5 controls__versions">
-                        <a class="red-text" id="delete-version" href="">
-                            delete current revision
-                        </a>
-                        <button id="prev-version" class="pure-button icon-left-open pure-button-disabled"></button>
-                        <button id="next-version" class="pure-button icon-right-open"></button>
+                    <div class="pure-u-3-5 controls__revisions">
+                        <a class="red-text" id="delete-revision" href="#">delete current revision</a>
+                        <button id="prev-revision" class="pure-button icon-left-open pure-button-disabled"></button>
+                        <button id="next-revision" class="pure-button icon-right-open"></button>
                     </div>
                 </div><!-- .controls -->
+
             </form>
-        </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="lib/popup.js"></script>
+        </div>        
+        <script src="lib/popup.js"></script>
 	</body>
 </html>
