--- a/popup.html
+++ b/popup.html
@@ -62,7 +62,7 @@
 
                 <div class="pure-g controls">
                     <div class="pure-u-2-5 controls__save">
-                        <input type="submit" id="save" class="pure-button" name="save" value="save">    
+                        <input type="submit" id="save" class="pure-button pure-button-primary" name="save" value="save">    
                         <a id="draft-remove" class="controls__remove-draft red-text is-hidden" href="#">remove draft</a>
                     </div>
                 </div><!-- .controls -->
