Added reset button, removed share button

--- a/popup.html
+++ b/popup.html
@@ -61,8 +61,9 @@
                 </div><!-- .source -->
 
                 <div class="pure-g controls">
-                    <div class="pure-u-2-5 controls__save">
-                        <input type="submit" id="save" class="pure-button pure-button-primary" name="save" value="save">    
+                    <div class="pure-u-3-5 controls__save">
+                        <input type="submit" id="save" class="pure-button pure-button-primary" name="save" value="save">
+                        <input type="submit" id="reset" class="pure-button" name="reset" value="reset">
                         <a id="draft-remove" class="controls__remove-draft red-text is-hidden" href="#">remove draft</a>
                     </div>
                 </div><!-- .controls -->
