Added error page

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="lib/ace/ace.js" charset="utf-8"></script>
 	</head>
 	<body>
-		<div class="cutomjs" id="cutomjs">
+		<div class="customjs" id="customjs">                    
             <form action="" method="post" accept-charset="utf-8" id="popup-form" class="pure-form">
                 
                 <div class="pure-g host">
@@ -69,6 +69,11 @@
                 </div><!-- .controls -->
 
             </form>
+            <div id="error" class="error is-hidden">
+                <strong>Custom JavaScript says:</strong>
+                <p class="red-text">It seems that this page cannot be modified with me..</p>
+                <span>tip: Try refresh page</span>
+            </div><!-- .error -->
         </div>        
         <script src="lib/popup.js"></script>
 	</body>
