Share form submit - added source to hidden input

--- a/popup.html
+++ b/popup.html
@@ -49,7 +49,7 @@
                             <div class="include__popbox__body">
                                 <textarea name="extra-scripts" id="extra-scripts"></textarea>
                             </div>
-                            <div class="include__popbox__screenmask" id="screen-mask" title="ahaha"></div>
+                            <div class="include__popbox__screenmask" id="screen-mask" title=""></div>
                         </div>
                     </div><!-- .include -->
 
@@ -58,6 +58,7 @@
                 <div class="pure-g source">
                     <div class="pure-u-1 source__editor">
                         <pre id="ace-editor"></pre>
+                        <input type="hidden" name="script" value="">
                     </div>
                 </div><!-- .source -->
 
